src/FinancialForce Accounting/objects/codaPeriod__c.object
<CustomObject>
    <customHelpPage>codahelpperiod</customHelpPage>
    <description>Defines the accounting periods into which a financial year is divided.</description>
    <fields>
        <fullName>AP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Periods</relationshipLabel>
        <relationshipName>Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodGroup__c</fullName>
        <label>Period Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeriodNumber__c</fullName>
        <label>Period Number</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearName__c</fullName>
        <label>Year Name</label>
        <referenceTo>codaYear__c</referenceTo>
        <relationshipLabel>Periods</relationshipLabel>
        <relationshipName>Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>YearName__c</columns>
        <columns>PeriodNumber__c</columns>
        <columns>Description__c</columns>
        <columns>EndDate__c</columns>
        <columns>Closed__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Period ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>